# Team-Productivity

./: README.md  package-lock.json  package.json
fastapi-backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.db
fastapi-backend/app/: lifespan.py  main.py  startup.py
fastapi-backend/app/api/: deps.py
fastapi-backend/app/cache/: redis.py
fastapi-backend/app/core/: config.py  constants.py  exceptions.py  logging.py  rate-limiter.py  security.py
fastapi-backend/app/db/: base.py  session.py
fastapi-backend/app/exceptions/: auth_exceptions.py  book_exceptions.py  database_exceptions.py  email_exceptions.py  file_exceptions.py  handlers.py  integration_exceptions.py  note_exceptions.py  task_exceptions.py  user_exceptions.py  validation_exceptions.py
fastapi-backend/app/integrations/: email_client.py  openlibrary_client.py
fastapi-backend/app/middleware/: __init__.py  request_logging.py  response_time.py  security_headers.py
fastapi-backend/app/models/: __init__.py  base_model.py  book_reference.py  email_verification_token.py  note.py  passwrd_reset_token.py  refresh_token.py  user.py  user_preference.py  user_session.py
fastapi-backend/app/repositories/: book_repository.py  note_repository.py  refresh_token_repository.py  user_repository.py
fastapi-backend/app/schemas/: auth.py  book.py  common.py  note.py  pagination.py  user.py
fastapi-backend/app/services/: auth_service.py  note_service.py  user_service.py
fastapi-backend/app/tasks/: __init__.py  cleanup_tasks.py  email_tasks.py
fastapi-backend/app/templates/: reset_password.html  verify_email.html
fastapi-backend/app/tests/: conftest.py  test_auth.py  test_notes.py
fastapi-backend/app/utils/: __init__.py  datetime.py  helpers.py  pagination.py  responses.py  (+1 more)
(+104 files in other folders)
