[project]
name = "notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "authlib>=1.7.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "fastapi-pagination>=0.15.12",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "boto3>=1.43.33",
    "celery>=5.6.3",
    "flower>=2.0.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "orjson>=3.11.9",
    "pillow>=12.2.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "python-multipart>=0.0.32",
    "python-slugify>=8.0.4",
    "redis>=8.0.0",
    "reportlab>=5.0.0",
    "sentry-sdk>=2.63.0",
    "slowapi>=0.1.10",
    "sqlalchemy-utils>=0.42.1",
    "structlog>=26.1.0",
]
